# solar-forecast-training

./: .gitignore  README.md  config.json  pyproject.toml  run_training.py
EDA/: eda.py
