[tool.poetry]
name = "solar-training-prediction"
version = "0.1.0"
description = ""
authors = ["froukje <falbrechtg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xgboost = "^2.0.3"
ml-garden = {git = "git@github.com:tryolabs/ml-garden.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
